:heavy_plus_sign: 定義追加

--- a/player.html
+++ b/player.html
@@ -17,7 +17,7 @@
           },
         },
         {
-          type: 'doNothing',
+          type: "doNothing",
           frameCount: 10,
         },
         {
@@ -34,7 +34,7 @@
           },
         },
         {
-          type: 'doNothing',
+          type: "doNothing",
           frameCount: 10,
         },
         {
@@ -53,9 +53,24 @@
       ];
 
       const frames = {
-        1: [],
-        2: [],
-        3: []
+        1: [
+          {
+            event: frameEvents[0],
+            relativeFrameCount: 1,
+          },
+        ],
+        11: [
+          {
+            event: frameEvents[1],
+            relativeFrameCount: 1,
+          },
+        ],
+        21: [
+          {
+            event: frameEvents[2],
+            relativeFrameCount: 1,
+          },
+        ],
       };
     </script>
   </head>
