:heavy_plus_sign: 追加

--- a/player.html
+++ b/player.html
@@ -15,6 +15,7 @@
               height: 120,
             },
           },
+          depth: 1,
         },
         {
           type: "doNothing",
@@ -32,6 +33,7 @@
               height: 120,
             },
           },
+          depth: 1,
         },
         {
           type: "doNothing",
@@ -49,6 +51,7 @@
               height: 120,
             },
           },
+          depth: 1,
         },
       ];
 
