--- a/player.html
+++ b/player.html
@@ -150,7 +150,7 @@
         };
 
         const depthToLayerWrapper = {};
-        const objectIdToElement = {};
+        const objectIdToElement = {}; // TODO: 要素のキャッシュを実装する
         function render(depthToLayer) {
           const root = document.getElementById("root");
           // TODO: 列挙順
