--- a/player.html
+++ b/player.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="slideshow.js" type="text/javascript"></script>
+    <script src="slideshowstop.js" type="text/javascript"></script>
     <script type="text/javascript">
       const range = (start, end) => [...Array(end + 1).keys()].slice(start);
 
@@ -119,7 +119,12 @@
 
         const depthToLayer = {};
         let currentFrameCount = 0;
+        let isPlaying = true;
         setInterval(function () {
+          if (!isPlaying) {
+            return false;
+          }
+
           currentFrameCount += 1;
           // 最後まで行ったら最初に戻る（判定これでいいのかな？）
           if (currentFrameCount > lastFrameCount) {
@@ -149,6 +154,8 @@
                     depthToLayer[eachDepth] = undefined;
                   });
                 }
+              } else if (event.executeAction.type === "stop") {
+                isPlaying = false;
               }
             }
 
