--- a/player.html
+++ b/player.html
@@ -83,6 +83,7 @@
         function render(depthToLayer) {
           const root = document.getElementById("root");
 
+          // TODO: ここの設定値も外から持ってくる
           root.style.border = "solid 1px #000";
           root.style.width = "640px";
           root.style.height = "480px";
