--- a/player.html
+++ b/player.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="slideshowcontrol.js" type="text/javascript"></script>
+    <script src="slideshowlabelsample.js" type="text/javascript"></script>
     <script type="text/javascript">
       const range = (start, end) => [...Array(end + 1).keys()].slice(start);
 
@@ -154,9 +154,25 @@
           });
         }
 
+        function calcualteLabelFrameCount(absoluteFrameCountToScheduledFrameEvents) {
+          const labelToFrameCount = {};
+          Object.keys(absoluteFrameCountToScheduledFrameEvents).forEach(function(frameCount) {
+            absoluteFrameCountToScheduledFrameEvents[frameCount].forEach(function(scheduledFrameEvent) {
+              if (scheduledFrameEvent.event.type === 'defineLabel') {
+                const label = scheduledFrameEvent.event.defineLabel.label;
+                labelToFrameCount[label] = frameCount;
+              }
+            });
+          });
+          return labelToFrameCount;
+        }
+
         const depthToLayer = {};
+        const labelToFrameCount = calcualteLabelFrameCount(absoluteFrameCountToScheduledFrameEvents);;
         let currentFrameCount = 0;
         let isPlaying = true;
+        console.log(absoluteFrameCountToScheduledFrameEvents);
+        console.log(labelToFrameCount);
 
         const context = {
           play() {
@@ -164,6 +180,15 @@
           },
           stop() {
             isPlaying = false;
+          },
+          gotoAndPlay(destination) {
+            // TODO: 本当はここでバリデーションが必要
+            if (typeof destination === 'string') {
+              currentFrameCount = labelToFrameCount[destination];
+            } else {
+              currentFrameCount = destination;
+            }
+            isPlaying = true;            
           },
           eraseLayers(depths) {
             if (depths.includes("all")) {
@@ -178,6 +203,8 @@
           },
         };
         function handleAction(action) {
+          // stop, gotoAndPlayはframeCountが1になる
+          // defineLabel, eraseLayersはframeCountは0
           if (action.type === "eraseLayers") {
             const depths = action.eraseLayers.depths;
             context.eraseLayers(depths);
@@ -185,6 +212,8 @@
             context.stop();
           } else if (action.type === "play") {
             context.play();
+          } else if (action.type === "gotoAndPlay") {
+            context.gotoAndPlay(action.gotoAndPlay.destination);
           }
         }
         setInterval(function () {
@@ -192,24 +221,21 @@
             return false;
           }
 
-          currentFrameCount += 1;
           // 最後まで行ったら最初に戻る（判定これでいいのかな？）
           if (currentFrameCount > lastFrameCount) {
             currentFrameCount = 0;
           }
+          console.log(currentFrameCount);
 
           const currentScheduledFrameEvents =
-            absoluteFrameCountToScheduledFrameEvents[currentFrameCount];
-          if (!currentScheduledFrameEvents) {
-            // 何もしないフレーム
-            return;
-          }
+            absoluteFrameCountToScheduledFrameEvents[currentFrameCount] || [];
 
           currentScheduledFrameEvents.forEach(function (scheduledFrameEvent) {
             const event = scheduledFrameEvent.event;
             const depth = event.depth;
 
             if (event.type === "executeAction") {
+              console.log('executeAction', event.executeAction);
               handleAction(event.executeAction);
             }
 
@@ -281,6 +307,7 @@
 
             render(depthToLayer, {handleAction});
           });
+          currentFrameCount += 1;
         }, 100);
       }
 
